--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,2 +1,3 @@
 {% extends "base.html" %} {% block title %}AdorablePets{% endblock %} {% block
 body %}Your Daily Dose of Cute {{animal}}{% endblock %}
+<h5>{% block message%}Top 5 {{animal}} Videos of the week:{% endblock %}</h5>
